--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
         body: JSON.stringify({ message })
       });
 
-      const data = await res.json();
-      document.getElementById("output").innerText = data.reply;
+const data = await res.json();
+
+document.getElementById("output").innerText =
+  JSON.stringify(data, null, 2);
+
     }
   </script>
 </body>
