--- a/index.html
+++ b/index.html
@@ -127,32 +127,31 @@ async function sendMessage() {
 }
 
 async function generateImage() {
-  const input = document.getElementById("input").value;
-  if (!input) return;
+  const response = await fetch(
+    "https://router.huggingface.co/hf-inference/models/stabilityai/stable-diffusion-xl-base-1.0",
+    {
+      method: "POST",
+      headers: {
+        "Authorization": "Bearer YOUR_HF_TOKEN",
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify({
+        inputs: "a cute anime girl with pink hair"
+      })
+    }
+  );
 
-  addMessage("画像生成中...", "ai");
-
-  const res = await fetch("/api/image", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ prompt: input })
-  });
-
-  const text = await res.text();
-
-  try {
-    const data = JSON.parse(text);
-    addMessage("画像エラー:\n" + text, "ai");
-  } catch {
-    const blob = new Blob([text]);
-    const url = URL.createObjectURL(blob);
-
-    const chat = document.getElementById("chat");
-    const img = document.createElement("img");
-    img.src = url;
-    chat.appendChild(img);
+  if (!response.ok) {
+    const text = await response.text();
+    console.error("API error:", text);
+    return;
   }
+
+  const blob = await response.blob();
+  const imgURL = URL.createObjectURL(blob);
+  document.getElementById("output").src = imgURL;
 }
+
 </script>
 
 </body>
