--- a/index.html
+++ b/index.html
@@ -1,157 +1,43 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>honeyAI</title>
-
-<style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #ffb347, #ffcc33);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
-}
-
-h1 {
-  margin-top: 20px;
-  color: white;
-  text-shadow: 2px 2px 5px rgba(0,0,0,0.2);
-}
-
-.chat-box {
-  width: 90%;
-  max-width: 600px;
-  background: white;
-  border-radius: 15px;
-  padding: 20px;
-  margin-top: 20px;
-  overflow-y: auto;
-  height: 60vh;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-}
-
-.message {
-  margin: 10px 0;
-  padding: 10px 15px;
-  border-radius: 20px;
-  max-width: 70%;
-}
-
-.user {
-  background: #ffd966;
-  align-self: flex-end;
-  margin-left: auto;
-}
-
-.ai {
-  background: #f1f1f1;
-  align-self: flex-start;
-}
-
-.input-area {
-  margin: 15px;
-  display: flex;
-  gap: 10px;
-}
-
-textarea {
-  flex: 1;
-  border-radius: 10px;
-  padding: 10px;
-}
-
-button {
-  background: #ff9900;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 10px;
-  color: white;
-  cursor: pointer;
-}
-
-button:hover {
-  background: #ff7f00;
-}
-
-img {
-  max-width: 100%;
-  margin-top: 10px;
-  border-radius: 10px;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>AI Image Generator</title>
 </head>
-
 <body>
 
-<h1>🍯 honeyAI</h1>
+<h2>画像生成</h2>
 
-<div class="chat-box" id="chat"></div>
+<input id="prompt" placeholder="プロンプト入力">
+<button onclick="generateImage()">生成</button>
 
-<div class="input-area">
-  <textarea id="input" rows="2"></textarea>
-  <button onclick="sendMessage()">送信</button>
-  <button onclick="generateImage()">画像</button>
-</div>
+<br><br>
+<img id="output" width="512">
 
 <script>
-function addMessage(text, type) {
-  const chat = document.getElementById("chat");
-  const div = document.createElement("div");
-  div.className = "message " + type;
-  div.innerText = text;
-  chat.appendChild(div);
-  chat.scrollTop = chat.scrollHeight;
-}
+async function generateImage() {
 
-async function sendMessage() {
-  const input = document.getElementById("input");
-  const message = input.value;
-  if (!message) return;
+  const prompt = document.getElementById("prompt").value;
 
-  addMessage(message, "user");
-  input.value = "";
-
-  const res = await fetch("/api/chat", {
+  const response = await fetch("/api/image", {
     method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ message })
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify({ prompt })
   });
 
-  const data = await res.json();
-  const reply = data.choices[0].message.content;
-
-  addMessage(reply, "ai");
-}
-
-async function generateImage() {
-  const response = await fetch(
-    "https://router.huggingface.co/hf-inference/models/stabilityai/stable-diffusion-xl-base-1.0",
-    {
-      method: "POST",
-      headers: {
-        "Authorization": "Bearer YOUR_HF_TOKEN",
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({
-        inputs: "a cute anime girl with pink hair"
-      })
-    }
-  );
-
   if (!response.ok) {
-    const text = await response.text();
-    console.error("API error:", text);
+    console.log(await response.text());
+    alert("エラー出てる。コンソール見て。");
     return;
   }
 
   const blob = await response.blob();
   const imgURL = URL.createObjectURL(blob);
+
   document.getElementById("output").src = imgURL;
 }
-
 </script>
 
 </body>
