--- a/index.html
+++ b/index.html
@@ -283,6 +283,12 @@ ${character.personality}
 ・敬語
 ・落ち着いた口調
 ・丁寧で優しい対応
+【話し方制限】
+・語尾を過度に伸ばさない（〜〜〜は禁止）
+・テンションを上げすぎない
+・自然な会話トーンを維持する
+・一文は長くしすぎない
+
 
 会話履歴:
 ${history}
