--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
   --text-dark:#f5f5f5;
 }
 
-/* テーマ */
+body{
+  margin:0;
+  transition:0.3s;
+}
+
 body.light{
   background:var(--bg-light);
   color:var(--text-light);
@@ -24,12 +28,6 @@ body.light{
 body.dark{
   background:var(--bg-dark);
   color:var(--text-dark);
-}
-body{
-  margin:0;
-  font-family:"Segoe UI",sans-serif;
-  transition:0.3s;
-  overflow:hidden;
 }
 
 /* 六角形背景 */
@@ -44,103 +42,83 @@ body::before{
   pointer-events:none;
 }
 
-/* ヘッダー */
 header{
   padding:15px;
   text-align:center;
   font-size:22px;
-  font-weight:600;
   background:linear-gradient(135deg,var(--honey-light),var(--honey-main));
-  box-shadow:0 4px 12px rgba(0,0,0,0.08);
 }
 
-/* コントロール */
 .controls{
   display:flex;
+  flex-wrap:wrap;
   gap:10px;
   padding:10px;
   justify-content:center;
-  flex-wrap:wrap;
-}
-select{
-  padding:8px 14px;
-  border-radius:20px;
-  border:none;
-  background:var(--honey-light);
-  font-size:14px;
 }
 
-/* チャットエリア */
+input, select, button{
+  padding:8px 12px;
+  border-radius:20px;
+  border:none;
+}
+
 .chat{
-  height:65vh;
+  height:55vh;
   overflow-y:auto;
   padding:20px;
   display:flex;
   flex-direction:column;
-  gap:14px;
+  gap:10px;
 }
 
-/* バブル */
 .message{
   max-width:70%;
-  padding:12px 18px;
-  border-radius:24px;
-  position:relative;
-  animation:fadeIn 0.3s ease;
+  padding:12px 16px;
+  border-radius:20px;
 }
+
 .user{
   align-self:flex-end;
-  background:#e0e0e0;
+  background:#ddd;
 }
+
 .ai{
   align-self:flex-start;
   background:linear-gradient(135deg,var(--honey-light),var(--honey-main));
 }
 
-/* 入力欄 */
 .input-area{
   display:flex;
-  padding:15px;
   gap:10px;
-}
-input{
-  flex:1;
-  padding:12px;
-  border-radius:20px;
-  border:1px solid #ccc;
-  font-size:15px;
-}
-button{
-  padding:12px 18px;
-  border:none;
-  border-radius:20px;
-  background:var(--honey-main);
-  cursor:pointer;
-  transition:0.2s;
-}
-button:hover{
-  background:var(--honey-dark);
-  transform:translateY(-2px);
+  padding:10px;
 }
 
-/* アニメ */
-@keyframes fadeIn{
-  from{opacity:0;transform:translateY(5px);}
-  to{opacity:1;transform:translateY(0);}
+img{
+  max-width:250px;
+  border-radius:10px;
+  margin-top:8px;
 }
 </style>
 </head>
+
 <body class="light">
 
 <header>HoneyAI</header>
 
 <div class="controls">
-  <select id="personality">
-    <option value="敬語">敬語</option>
-    <option value="なれなれしい">なれなれしい</option>
-    <option value="敬語×なれなれしい">敬語×なれなれしい</option>
+  <!-- 性格自由入力 -->
+  <input type="text" id="personality" placeholder="性格を入力（例: 敬語×なれなれしい）">
+
+  <!-- フォント選択 -->
+  <select id="fontSelect">
+    <option value="sans-serif">標準</option>
+    <option value="serif">Serif</option>
+    <option value="monospace">Monospace</option>
+    <option value="cursive">Cursive</option>
   </select>
 
+  <!-- テーマ -->
   <select id="theme">
     <option value="light">ライト</option>
     <option value="dark">ブラック</option>
@@ -151,27 +129,32 @@ button:hover{
 <div class="chat" id="chat"></div>
 
 <div class="input-area">
-  <input type="text" id="input" placeholder="メッセージを入力...">
+  <input type="text" id="input" placeholder="メッセージを入力">
   <button onclick="sendMessage()">送信</button>
+  <button onclick="generateImage()">画像生成</button>
 </div>
 
 <script>
-const chat = document.getElementById("chat");
-const input = document.getElementById("input");
-const themeSelect = document.getElementById("theme");
+const chat=document.getElementById("chat");
+const input=document.getElementById("input");
+
+/* フォント変更 */
+document.getElementById("fontSelect").addEventListener("change",(e)=>{
+  document.body.style.fontFamily=e.target.value;
+});
 
 /* テーマ切替 */
-themeSelect.addEventListener("change",()=>{
-  const value = themeSelect.value;
+document.getElementById("theme").addEventListener("change",(e)=>{
+  const value=e.target.value;
   if(value==="system"){
-    const dark = window.matchMedia("(prefers-color-scheme: dark)").matches;
-    document.body.className = dark ? "dark" : "light";
+    const dark=window.matchMedia("(prefers-color-scheme: dark)").matches;
+    document.body.className=dark?"dark":"light";
   }else{
-    document.body.className = value;
+    document.body.className=value;
   }
 });
 
-/* メッセージ追加 */
+/* メッセージ表示 */
 function addMessage(text,type){
   const div=document.createElement("div");
   div.className="message "+type;
@@ -201,6 +184,27 @@ async function sendMessage(){
 
   const data=await res.json();
   addMessage(data.reply,"ai");
+}
+
+/* 画像生成 */
+async function generateImage(){
+  const prompt=input.value.trim();
+  if(!prompt) return;
+
+  addMessage("画像生成中...","ai");
+
+  const res=await fetch("/api/image",{
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body:JSON.stringify({prompt})
+  });
+
+  const data=await res.json();
+
+  const img=document.createElement("img");
+  img.src=data.image;
+  chat.appendChild(img);
+  chat.scrollTop=chat.scrollHeight;
 }
 </script>
 
